--- a/QianJiaJia-kitchen/app/build.gradle
+++ b/QianJiaJia-kitchen/app/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.github.dongjunkun:BannerLayout:1.0.4'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
 }
