--- a/QianJiaJia-kitchen/app/src/main/AndroidManifest.xml
+++ b/QianJiaJia-kitchen/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jiajiaqian.kitchen">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
     <application
         android:name=".KitchenApplication"
         android:allowBackup="true"
