--- a/QianJiaJia-kitchen/app/build.gradle
+++ b/QianJiaJia-kitchen/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.github.dongjunkun:BannerLayout:1.0.4'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'junit:junit:4.12'
 }
