--- a/QianJiaJia-kitchen/app/src/main/AndroidManifest.xml
+++ b/QianJiaJia-kitchen/app/src/main/AndroidManifest.xml
@@ -20,6 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.personal.PersonalMyOrderActivity">
+
+        </activity>
+        <activity android:name=".ui.personal.PersonalSettingActivity">
+
+        </activity>
+        <activity android:name=".ui.personal.PersonalMyDataActivity">
+
+        </activity>
     </application>
 
 </manifest>
