【kitchen】优化布局，实现监听时间。重点是recyclerview的嵌套问题- -

--- a/QianJiaJia-kitchen/app/build.gradle
+++ b/QianJiaJia-kitchen/app/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion '25.0.1'
+
+    aaptOptions.cruncherEnabled = false
+    aaptOptions.useNewCruncher = false
+
     defaultConfig {
         applicationId "com.jiajiaqian.kitchen"
         minSdkVersion 15
@@ -15,6 +19,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+}
+
+allprojects {
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
         }
     }
 }
@@ -33,4 +45,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'junit:junit:4.12'
+    compile 'org.xutils:xutils:3.2.2'
 }
