[kitchen]添加分类的子分类列表页面

--- a/QianJiaJia-kitchen/app/src/main/AndroidManifest.xml
+++ b/QianJiaJia-kitchen/app/src/main/AndroidManifest.xml
@@ -52,6 +52,16 @@
         <activity android:name=".ui.ProductDetailsActivity">
 
         </activity>
+        <activity android:name=".ui.ProductSearchActivity">
+
+        </activity>
+        <activity android:name=".ui.ShopActivity">
+
+        </activity>
+        <activity android:name=".ui.sort.SubSortListActivity">
+        </activity>
+        <activity android:name=".ui.home.SelectAddressActivity">
+        </activity>
         <activity android:name=".ui.shop.ShopProductDetailsActivity"></activity>
         <activity android:name=".ui.personal.PersonalAddressAddActivity"></activity>
         <activity android:name=".ui.personal.PersonalMyOrderDetailsActivity"></activity>
